@@ -11,4 +11,7 @@
 - Fix XTest event output
 - Fix order of events, release was being sent before press.
 - increase max number of key up/down events recorded to 1024
-
+SVN:
+- Add --dump (-d) option to dump recorded macros in human-readable format
+- Add --version (-v)
+- Add --debug (-g) to add some debugging
